include/dss_capi.h

    DSS_CAPI_DLL void CktElement_Open(int32_t Term, int32_t Phs);
    DSS_CAPI_DLL void CktElement_Set_EmergAmps(double Value);
    DSS_CAPI_DLL void CktElement_Set_Enabled(uint16_t Value);
    DSS_CAPI_DLL void CktElement_Set_NormalAmps(double Value);
    DSS_CAPI_DLL uint16_t CktElement_IsOpen(int32_t Term, int32_t Phs);
    DSS_CAPI_DLL void CktElement_Get_AllPropertyNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL int32_t CktElement_Get_NumProperties(void);
    DSS_CAPI_DLL void CktElement_Get_Residuals(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_Yprim(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL char* CktElement_Get_DisplayName(void);
    DSS_CAPI_DLL char* CktElement_Get_GUID(void);
    DSS_CAPI_DLL int32_t CktElement_Get_Handle(void);
    DSS_CAPI_DLL void CktElement_Set_DisplayName(char* Value);
    DSS_CAPI_DLL char* CktElement_Get_Controller(int32_t idx);
    DSS_CAPI_DLL char* CktElement_Get_EnergyMeter(void);
    DSS_CAPI_DLL uint16_t CktElement_Get_HasVoltControl(void);
    DSS_CAPI_DLL uint16_t CktElement_Get_HasSwitchControl(void);
    DSS_CAPI_DLL void CktElement_Get_CplxSeqVoltages(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_CplxSeqCurrents(double** ResultPtr, int32_t* ResultCount);