src/CAPI_CktElement.pas


{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
procedure CktElement_Open(Term, Phs: Integer);cdecl;
Begin
   IF ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
      If ActiveCktElement<>nil THEN
      WITH ActiveCktElement DO
      Begin
        ActiveTerminal := Terminals^[Term];
        Closed[Phs] := FALSE;
      End;
   End;

end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
procedure CktElement_Set_EmergAmps(Value: Double);cdecl;
begin

     If ActiveCircuit <> Nil Then
     With ActiveCircuit Do
     Begin
         If IsPDElement Then
         Begin
             With ActiveCktElement As TPDElement Do EmergAmps := Value;
         End;  {Else Do Nothing}
     End;
end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
procedure CktElement_Set_Enabled(Value: WordBool);cdecl;
begin
   If ActiveCircuit <> Nil Then
      ActiveCircuit.ActiveCktElement.Enabled := Value;
end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
procedure CktElement_Set_NormalAmps(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then
     Begin
         If IsPDElement Then
         Begin
             With ActiveCircuit Do With ActiveCktElement As TPDElement Do NormAmps := Value;
         End;  {Else Do Nothing}
     End;
end;
//------------------------------------------------------------------------------
function CktElement_IsOpen(Term, Phs: Integer):WordBool;cdecl;
Var
   i  :Integer;

begin
     If ActiveCircuit <> Nil Then
     With ActiveCircuit Do
     Begin
         With ActiveCktElement Do ActiveTerminal := Terminals^[Term];
         If Phs=0 Then // At least one must be open
         Begin
             Result := False;
             For i := 1 to ActiveCktElement.NConds Do
                 If not ActiveCktElement.Closed[i] Then
                 Begin
                    Result :=  True;
                    Exit;
                 End;
         End
         Else // Check a specific phase or conductor
         Begin
             Result := Not ActiveCktElement.Closed[Phs];
         End;
     End;
end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_AllPropertyNames(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
VAR
  Result: PPAnsiCharArray;
   k:Integer;
begin
  Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement<>Nil THEN
     WITH ActiveCktElement DO
     Begin
          WITH ParentClass Do
          Begin
              Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (NumProperties-1) + 1);
              For k := 1 to NumProperties DO Begin
                  Result[k-1] := DSS_CopyStringAsPChar(PropertyName^[k]);
              End;
          End;
     End
   End;
end;
//------------------------------------------------------------------------------
function CktElement_Get_NumProperties():Integer;cdecl;
begin
  Result := 0;
  IF ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement<>Nil THEN
     WITH ActiveCktElement DO
     Begin
          Result := ParentClass.NumProperties ;
     End
   End;


end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_Residuals(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
VAR
  Result: PDoubleArray;
  cBuffer       :pComplexArray;
  iV ,i, j, k   :Integer;
  cResid        :Complex;

Begin

  If ActiveCircuit <> Nil Then
     WITH ActiveCircuit.ActiveCktElement DO
     Begin
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*NTerms-1) + 1);    // 2 values per terminal
         cBuffer := Allocmem(sizeof(cBuffer^[1])*Yorder);
         GetCurrents(cBuffer);
         iV :=0;
         For i := 1 to  NTerms DO
         Begin
            cResid := CZERO;
            k :=(i-1)*Nconds;
            For j := 1 to Nconds Do Begin
                inc(k);
                Caccum(cResid, CBuffer^[k]);
            End;
            Result[iV] := Cabs(cResid);
            Inc(iV);
            Result[iV] := CDang(cResid);
            Inc(iV);
         End;
         Reallocmem(cBuffer,0);
     End
  Else
     Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);

end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_Yprim(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
{ Return the YPrim matrix for this element }

VAR
  Result: PDoubleArray;
   iV      : Integer;
   i       : Integer;
   NValues : Integer;
   cValues : pComplexArray;

begin
   IF ActiveCircuit = nil Then Begin
        Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
   End
   ELSE With ActiveCircuit Do
      If ActiveCktElement<>Nil THEN
      WITH ActiveCktElement Do  Begin
          NValues := SQR(Yorder);
          cValues := GetYprimValues(ALL_YPRIM);  // Get pointer to complex array of values
          If cValues=Nil Then Begin   // check for unassigned array
                            Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array
                            Exit;  // Get outta here
                         End;
          Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*NValues -1) + 1);  // Make variant array
          iV := 0;

          FOR i := 1 to  NValues DO  Begin    // Plunk the values in the variant array
              Result[iV] := cValues^[i].re;
              Inc(iV);
              Result[iV] := cValues^[i].im;
              Inc(iV);
          End;
      End
      ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;
//------------------------------------------------------------------------------
function CktElement_Get_DisplayName_AnsiString():AnsiString;inline;
begin
   If ActiveCircuit <> Nil Then
      Result := ActiveCircuit.ActiveCktElement.DisplayName
   Else
      Result := '';
end;

function CktElement_Get_DisplayName():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(CktElement_Get_DisplayName_AnsiString());
end;
//------------------------------------------------------------------------------
function CktElement_Get_GUID_AnsiString():AnsiString;inline;
begin
   If ActiveCircuit <> Nil Then
      Result := ActiveCircuit.ActiveCktElement.ID
   Else
      Result := '';
end;

function CktElement_Get_GUID():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(CktElement_Get_GUID_AnsiString());
end;
//------------------------------------------------------------------------------
function CktElement_Get_Handle():Integer;cdecl;
begin
   If ActiveCircuit <> Nil Then
      Result := ActiveCircuit.ActiveCktElement.Handle
   Else
      Result := 0;
end;
//------------------------------------------------------------------------------
procedure CktElement_Set_DisplayName(const Value: PAnsiChar);cdecl;
begin
   If ActiveCircuit <> Nil Then
      ActiveCircuit.ActiveCktElement.DisplayName := Value;
end;
//------------------------------------------------------------------------------
function CktElement_Get_Controller_AnsiString(idx: Integer):AnsiString;inline;
var
  ctrl: TDSSCktElement;
begin
  Result := '';
  If ActiveCircuit <> Nil Then With ActiveCircuit Do begin
    If (idx>0) and (idx <= ActiveCktElement.ControlElementList.Listsize) Then
    Begin
      ctrl := ActiveCktElement.ControlElementList.Get(idx);
      If ctrl <> Nil Then
        Result := Format('%s.%s', [ctrl.ParentClass.Name, ctrl.Name]);
    End;
  end;
end;

function CktElement_Get_Controller(idx: Integer):PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(CktElement_Get_Controller_AnsiString(idx));
end;
//------------------------------------------------------------------------------
function CktElement_Get_EnergyMeter_AnsiString():AnsiString;inline;
var
  pd: TPDElement;
begin
  Result := '';
  If ActiveCircuit <> Nil Then begin
    if ActiveCircuit.ActiveCktElement.HasEnergyMeter then begin
      pd := ActiveCircuit.ActiveCktElement as TPDElement;
      Result := pd.MeterObj.Name;
    end;
  end;
end;

function CktElement_Get_EnergyMeter():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(CktElement_Get_EnergyMeter_AnsiString());
end;
//------------------------------------------------------------------------------
function CktElement_Get_HasVoltControl():WordBool;cdecl;
// Returns true if any of the controls is a capcontrol or a regcontrol
var
  ctrl: TDSSCktElement;
begin
  Result := FALSE;
  If ActiveCircuit <> Nil Then begin
    ctrl := ActiveCircuit.ActiveCktElement.ControlElementlist.First;
    While ctrl <> Nil Do Begin
      case (ctrl.DSSObjType And CLASSMASK) of
        CAP_CONTROL,
        REG_CONTROL: Result := True;
      else
        Result := False;
      end;
      If Result Then  Exit;

      ctrl := ActiveCircuit.ActiveCktElement.ControlElementlist.Next;
    End;
  end;
end;
//------------------------------------------------------------------------------
function CktElement_Get_HasSwitchControl():WordBool;cdecl;
var
  ctrl: TDSSCktElement;
begin
  Result := FALSE;
  If ActiveCircuit <> Nil Then begin
    ctrl := ActiveCircuit.ActiveCktElement.ControlElementList.First;
    While ctrl <> Nil Do
    Begin
      case (ctrl.DSSObjType And CLASSMASK) of
        SWT_CONTROL: Result := True;
      else
        Result := False;
      end;
      If Result Then  Exit;

      ctrl := ActiveCircuit.ActiveCktElement.ControlElementlist.Next;
    End;
  end;
end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_CplxSeqVoltages(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
{returns Seq Voltages as array of complex values}
VAR
  Result: PDoubleArray;
    i, iV  :Integer;
    V012 :pComplexArray;
    S :String;

Begin

  IF   ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement <> Nil THEN
     WITH ActiveCktElement DO
     If Enabled Then
     Begin
         TRY
            Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*3*NTerms-1) + 1);

            V012 := Allocmem(Sizeof(V012^[1]) * 3 * Nterms);
            // get complex seq voltages
            CalcSeqVoltages(ActiveCktElement, V012);
            // return 0 based array
            iV := 0;
            For i := 1 to 3*Nterms do Begin
                Result[iV] := V012^[i].re;
                inc(iV);
                Result[iV] := V012^[i].im;
                inc(iV);
            End;

            Reallocmem(V012, 0);  // throw away temp memory

          EXCEPT
             On E:Exception Do
             Begin
                S:= E.message + CRLF +
                    'Element='+ ActiveCktElement.Name + CRLF+
                    'Nphases=' + IntToStr(Nphases) + CRLF +
                    'NTerms=' + IntToStr(NTerms) + CRLF +
                    'NConds =' + IntToStr(NConds);
                DoSimpleMsg(S, 5012);
              End;
          END;
     End
     Else
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // Disabled

   End
  ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);

end;
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_CplxSeqCurrents(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
{returns Seq Voltages as array of complex values}
VAR
  Result: PDoubleArray;
    i, iV  :Integer;
    i012 :pComplexArray;
    S :String;
